--- a/src/Day 05 Hydrothermal Venture.ipynb
+++ b/src/Day 05 Hydrothermal Venture.ipynb
@@ -68,7 +68,7 @@
     "9 222111....\n",
     "```\n",
     "\n",
-    "\"0,9 -> 5,9\": column 0, row 9 -> column 5, row 9\n",
+    "`x1,y1 -> x2,y2` = `\"0,9 -> 5,9\"` = column 0, row 9 -> column 5, row 9\n",
     "  * x = columns\n",
     "  * y = rows"
    ]
@@ -96,18 +96,19 @@
     "    x2: int\n",
     "    y2: int\n",
     "\n",
-    "RE_LINE = re.compile(r\"^\\s*(?P<x1>\\d+)\\s*\\,\\s*(?P<y1>\\d+)\\s*\\-\\>\\s*(?P<x2>\\d+)\\s*\\,\\s*(?P<y2>\\d+)\\s*$\")\n",
-    "def parse_line(line):\n",
-    "    if mt_line := RE_LINE.match(line):\n",
-    "        return Line(int(mt_line[\"x1\"]), int(mt_line[\"y1\"]), int(mt_line[\"x2\"]), int(mt_line[\"y2\"]))\n",
+    "    @staticmethod\n",
+    "    def parse_line(line):\n",
+    "        if mt_line := re.match(r\"^\\s*(?P<x1>\\d+)\\s*\\,\\s*(?P<y1>\\d+)\\s*\\-\\>\\s*(?P<x2>\\d+)\\s*\\,\\s*(?P<y2>\\d+)\\s*$\", line):\n",
+    "            return Line(int(mt_line[\"x1\"]), int(mt_line[\"y1\"]), int(mt_line[\"x2\"]), int(mt_line[\"y2\"]))\n",
     "\n",
-    "print(f\"Check parse_line (valid): {parse_line(example_data[0]) == Line(0, 9, 5, 9)}\")\n",
-    "print(f\"Check parse_line (invalid): {parse_line('no line') is None}\")\n"
+    "print(f\"Check parse_line (valid): {Line.parse_line(example_data[0]) == Line(0, 9, 5, 9)}\")\n",
+    "print(f\"Check parse_line (invalid): {Line.parse_line('no line') is None}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2ac86a78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,46 +119,47 @@
     "    def __post_init__(self):\n",
     "        self.data = [[0]]\n",
     "\n",
-    "    def _resize_data(self, max_x, max_y):\n",
-    "        min_x_size = max_x + 1\n",
-    "        min_y_size = max_y + 1\n",
+    "    def _resize(self, max_x, max_y):\n",
+    "        min_x_size, min_y_size = max_x + 1, max_y + 1\n",
     "        if len(self.data[0]) < min_x_size:\n",
-    "            addition = min_x_size - len(self.data[0])\n",
+    "            n_extend = min_x_size - len(self.data[0])\n",
     "            for row in self.data:\n",
-    "                row.extend([0] * addition)\n",
+    "                row.extend([0] * n_extend)\n",
     "        if len(self.data) < min_y_size:\n",
+    "            row_length = len(self.data[0])\n",
     "            for _ in range(len(self.data), min_y_size):\n",
-    "                self.data.append([0] * len(self.data[0]))\n",
+    "                self.data.append([0] * row_length)\n",
     "\n",
+    "    def _plot_line(self, line):\n",
+    "        x_delta = line.x2 - line.x1\n",
+    "        y_delta = line.y2 - line.y1\n",
+    "        if (x_delta != 0) and (y_delta == 0):\n",
+    "            for x in range(min(line.x1, line.x2), max(line.x1, line.x2)+1):\n",
+    "                self.data[line.y1][x] += 1\n",
+    "        elif (y_delta != 0) and (x_delta == 0):\n",
+    "            for y in range(min(line.y1, line.y2), max(line.y1, line.y2)+1):\n",
+    "                self.data[y][line.x1] += 1\n",
+    "                \n",
     "    def add_line(self, line_text):\n",
-    "        line = parse_line(line_text)\n",
-    "        if line:\n",
-    "            self._resize_data(line.x1, line.y1)\n",
-    "            self._resize_data(line.x2, line.y2)\n",
-    "            x_delta = line.x2 - line.x1\n",
-    "            y_delta = line.y2 - line.y1\n",
-    "            if (x_delta != 0) and (y_delta == 0):\n",
-    "                for x in range(min(line.x1, line.x2), max(line.x1, line.x2)+1):\n",
-    "                    self.data[line.y1][x] += 1\n",
-    "            elif (y_delta != 0) and (x_delta == 0):\n",
-    "                for y in range(min(line.y1, line.y2), max(line.y1, line.y2)+1):\n",
-    "                    self.data[y][line.x1] += 1\n",
+    "        line = Line.parse_line(line_text)\n",
+    "        if line is not None:\n",
+    "            self._resize(line.x1, line.y1)\n",
+    "            self._resize(line.x2, line.y2)\n",
+    "            self._plot_line(line)\n",
+    "\n",
+    "    def process_lines(self, line_data):\n",
+    "        for line in line_data:\n",
+    "            self.add_line(line)\n",
     "\n",
     "    def get_at_least_n_overlap(self, n):\n",
-    "        cnt = cl.Counter()\n",
-    "        for row in self.data:\n",
-    "            cnt.update(row)\n",
-    "        result = 0\n",
-    "        for n_cnt, num in cnt.items():\n",
-    "            if n_cnt >= n:\n",
-    "                result += num\n",
-    "        return result"
+    "        cnt = cl.Counter([col for row in self.data for col in row])\n",
+    "        return sum([count for key, count in cnt.items() if key >= n])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5356693f",
+   "id": "56480762-f508-4856-bfc7-22a86c4f1fa9",
    "metadata": {},
    "outputs": [
     {
@@ -170,8 +172,7 @@
    ],
    "source": [
     "diagram = Diagram1()\n",
-    "for line_text in example_data:\n",
-    "    diagram.add_line(line_text)\n",
+    "diagram.process_lines(example_data)\n",
     "print(f\"Check part 1: {diagram.get_at_least_n_overlap(2) == 5}\")"
    ]
   },
@@ -211,8 +212,7 @@
    ],
    "source": [
     "diagram = Diagram1()\n",
-    "for line_text in line_data:\n",
-    "    diagram.add_line(line_text)\n",
+    "diagram.process_lines(line_data)\n",
     "print(f\"Answer part 1: {diagram.get_at_least_n_overlap(2)}\")"
    ]
   },
@@ -233,26 +233,18 @@
    "source": [
     "@dc.dataclass\n",
     "class Diagram2(Diagram1):\n",
-    "    def add_line(self, line_text):\n",
-    "        line = parse_line(line_text)\n",
-    "        if line:\n",
-    "            self._resize_data(line.x1, line.y1)\n",
-    "            self._resize_data(line.x2, line.y2)\n",
-    "            x, y = line.x1, line.y1\n",
-    "            while True:\n",
-    "                self.data[y][x] += 1\n",
-    "                if (x == line.x2) and (y == line.y2):\n",
-    "                    break\n",
-    "                if x != line.x2:\n",
-    "                    if x < line.x2:\n",
-    "                        x += 1\n",
-    "                    else:\n",
-    "                        x -= 1\n",
-    "                if y != line.y2:\n",
-    "                    if y <= line.y2:\n",
-    "                        y += 1\n",
-    "                    else:\n",
-    "                        y -= 1\n"
+    "    def _plot_line(self, line):\n",
+    "        x, y = line.x1, line.y1\n",
+    "        x_incr = 1 if x < line.x2 else -1\n",
+    "        y_incr = 1 if y < line.y2 else -1\n",
+    "        while True:\n",
+    "            self.data[y][x] += 1\n",
+    "            if (x == line.x2) and (y == line.y2):\n",
+    "                break\n",
+    "            if x != line.x2:\n",
+    "                x += x_incr\n",
+    "            if y != line.y2:\n",
+    "                y += y_incr"
    ]
   },
   {
@@ -265,15 +257,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check part 1: True\n"
+      "Check part 2: True\n"
      ]
     }
    ],
    "source": [
     "diagram = Diagram2()\n",
-    "for line_text in example_data:\n",
-    "    diagram.add_line(line_text)\n",
-    "print(f\"Check part 1: {diagram.get_at_least_n_overlap(2) == 12}\")"
+    "diagram.process_lines(example_data)\n",
+    "print(f\"Check part 2: {diagram.get_at_least_n_overlap(2) == 12}\")"
    ]
   },
   {
@@ -292,15 +283,14 @@
    ],
    "source": [
     "diagram = Diagram2()\n",
-    "for line_text in line_data:\n",
-    "    diagram.add_line(line_text)\n",
+    "diagram.process_lines(line_data)\n",
     "print(f\"Answer part 2: {diagram.get_at_least_n_overlap(2)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfe6896b",
+   "id": "f1b532b1-b23b-4a69-96c6-27c29744f2d8",
    "metadata": {},
    "outputs": [],
    "source": []
