more refactoring Day 05

--- a/src/Day 05 Hydrothermal Venture.ipynb
+++ b/src/Day 05 Hydrothermal Venture.ipynb
@@ -50,30 +50,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b25e1b18",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "  0123456789\n",
-    "0 .......1..\n",
-    "1 ..1....1..\n",
-    "2 ..1....1..\n",
-    "3 .......1..\n",
-    "4 .112111211\n",
-    "5 ..........\n",
-    "6 ..........\n",
-    "7 ..........\n",
-    "8 ..........\n",
-    "9 222111....\n",
-    "```\n",
-    "\n",
-    "`x1,y1 -> x2,y2` = `\"0,9 -> 5,9\"` = column 0, row 9 -> column 5, row 9\n",
-    "  * x = columns\n",
-    "  * y = rows"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "c7aed14f-e73c-472c-8865-f44279d62bc4",
@@ -98,8 +74,8 @@
     "\n",
     "    @staticmethod\n",
     "    def parse_line(line):\n",
-    "        if mt_line := re.match(r\"^\\s*(?P<x1>\\d+)\\s*\\,\\s*(?P<y1>\\d+)\\s*\\-\\>\\s*(?P<x2>\\d+)\\s*\\,\\s*(?P<y2>\\d+)\\s*$\", line):\n",
-    "            return Line(int(mt_line[\"x1\"]), int(mt_line[\"y1\"]), int(mt_line[\"x2\"]), int(mt_line[\"y2\"]))\n",
+    "        if mt_line := re.match(r\"^\\s*(\\d+)\\s*\\,\\s*(\\d+)\\s*\\-\\>\\s*(\\d+)\\s*\\,\\s*(\\d+)\\s*$\", line):\n",
+    "            return Line(*map(int, mt_line.groups()))\n",
     "\n",
     "print(f\"Check parse_line (valid): {Line.parse_line(example_data[0]) == Line(0, 9, 5, 9)}\")\n",
     "print(f\"Check parse_line (invalid): {Line.parse_line('no line') is None}\")"
@@ -112,39 +88,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def default_zero_dict():\n",
+    "    return cl.defaultdict(int)\n",
+    "\n",
     "@dc.dataclass\n",
     "class Diagram1:\n",
-    "    data: list[list[int]] = dc.field(default_factory=list)  # x=rows, y=columns\n",
+    "    data: cl.defaultdict = dc.field(default_factory=default_zero_dict)\n",
     "\n",
-    "    def __post_init__(self):\n",
-    "        self.data = [[0]]\n",
+    "    def _plot_line(self, line, diagonal=False):\n",
+    "        x, y = line.x1, line.y1\n",
+    "        delta_x = 0 if x == line.x2 else 1 if x < line.x2 else -1\n",
+    "        delta_y = 0 if y == line.y2 else 1 if y < line.y2 else -1\n",
+    "        if (not diagonal) and ((abs(delta_x) + abs(delta_y)) > 1):\n",
+    "            return\n",
+    "        while True:\n",
+    "            self.data[(x, y)] += 1\n",
+    "            if (x == line.x2) and (y == line.y2): break\n",
+    "            x += delta_x\n",
+    "            y += delta_y\n",
     "\n",
-    "    def _resize(self, max_x, max_y):\n",
-    "        min_x_size, min_y_size = max_x + 1, max_y + 1\n",
-    "        if len(self.data[0]) < min_x_size:\n",
-    "            n_extend = min_x_size - len(self.data[0])\n",
-    "            for row in self.data:\n",
-    "                row.extend([0] * n_extend)\n",
-    "        if len(self.data) < min_y_size:\n",
-    "            row_length = len(self.data[0])\n",
-    "            for _ in range(len(self.data), min_y_size):\n",
-    "                self.data.append([0] * row_length)\n",
-    "\n",
-    "    def _plot_line(self, line):\n",
-    "        x_delta = line.x2 - line.x1\n",
-    "        y_delta = line.y2 - line.y1\n",
-    "        if (x_delta != 0) and (y_delta == 0):\n",
-    "            for x in range(min(line.x1, line.x2), max(line.x1, line.x2)+1):\n",
-    "                self.data[line.y1][x] += 1\n",
-    "        elif (y_delta != 0) and (x_delta == 0):\n",
-    "            for y in range(min(line.y1, line.y2), max(line.y1, line.y2)+1):\n",
-    "                self.data[y][line.x1] += 1\n",
-    "                \n",
     "    def add_line(self, line_text):\n",
     "        line = Line.parse_line(line_text)\n",
     "        if line is not None:\n",
-    "            self._resize(line.x1, line.y1)\n",
-    "            self._resize(line.x2, line.y2)\n",
     "            self._plot_line(line)\n",
     "\n",
     "    def process_lines(self, line_data):\n",
@@ -152,7 +117,7 @@
     "            self.add_line(line)\n",
     "\n",
     "    def get_at_least_n_overlap(self, n):\n",
-    "        cnt = cl.Counter([col for row in self.data for col in row])\n",
+    "        cnt = cl.Counter(self.data.values())\n",
     "        return sum([count for key, count in cnt.items() if key >= n])"
    ]
   },
@@ -233,18 +198,8 @@
    "source": [
     "@dc.dataclass\n",
     "class Diagram2(Diagram1):\n",
-    "    def _plot_line(self, line):\n",
-    "        x, y = line.x1, line.y1\n",
-    "        x_incr = 1 if x < line.x2 else -1\n",
-    "        y_incr = 1 if y < line.y2 else -1\n",
-    "        while True:\n",
-    "            self.data[y][x] += 1\n",
-    "            if (x == line.x2) and (y == line.y2):\n",
-    "                break\n",
-    "            if x != line.x2:\n",
-    "                x += x_incr\n",
-    "            if y != line.y2:\n",
-    "                y += y_incr"
+    "    def _plot_line(self, line, diagonal=True):\n",
+    "        super()._plot_line(line, diagonal)"
    ]
   },
   {
