do not use a dataclass when it doesn't make sense

--- a/src/Day 05 Hydrothermal Venture.ipynb
+++ b/src/Day 05 Hydrothermal Venture.ipynb
@@ -88,12 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def default_zero_dict():\n",
-    "    return cl.defaultdict(int)\n",
-    "\n",
-    "@dc.dataclass\n",
     "class Diagram1:\n",
-    "    data: cl.defaultdict = dc.field(default_factory=default_zero_dict)\n",
+    "    def __init__(self):\n",
+    "        self.data = cl.defaultdict(int)\n",
     "\n",
     "    def _plot_line(self, line, diagonal=False):\n",
     "        x, y = line.x1, line.y1\n",
@@ -196,7 +193,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@dc.dataclass\n",
     "class Diagram2(Diagram1):\n",
     "    def _plot_line(self, line, diagonal=True):\n",
     "        super()._plot_line(line, diagonal)"
