--- a/src/Day 11 Dumbo Octopus.ipynb
+++ b/src/Day 11 Dumbo Octopus.ipynb
@@ -63,22 +63,21 @@
     "class Octopus:\n",
     "    energy: int\n",
     "    has_flashed: bool = False\n",
-    "    \n",
+    "\n",
     "    def increase_energy(self):\n",
-    "        if (not self.has_flashed):\n",
+    "        if not self.has_flashed:\n",
     "            self.energy += 1\n",
-    "    \n",
-    "    def flash_or_not(self):\n",
+    "\n",
+    "    def flashed(self):\n",
     "        if (not self.has_flashed) and (self.energy > 9):\n",
     "            self.has_flashed = True\n",
     "            self.energy = 0\n",
-    "            return 1\n",
-    "        else:\n",
-    "            return 0\n",
+    "            return True\n",
+    "        return False\n",
     "\n",
     "    def end_step(self):\n",
-    "        if self.has_flashed:\n",
-    "            self.has_flashed = False\n",
+    "        self.has_flashed = False\n",
+    "\n",
     "\n",
     "class Cavern1:\n",
     "    def __init__(self, energy_states):\n",
@@ -92,13 +91,13 @@
     "        self.max_x = len(self.grid[0]) - 1\n",
     "        self.step = 0\n",
     "        self.flashes = 0\n",
-    "    \n",
+    "\n",
     "    def radiate(self, x, y):\n",
     "        for ny in range(y-1, y+2):\n",
     "            for nx in range(x-1, x+2):\n",
     "                if (0 <= ny <= self.max_y) and (0 <= nx <= self.max_x) and not((nx == x) and (ny == y)):\n",
     "                    self.grid[ny][nx].increase_energy()\n",
-    "    \n",
+    "\n",
     "    def next_step(self, n=1):\n",
     "        for step in range(0, n):\n",
     "            # increase energy\n",
@@ -107,18 +106,14 @@
     "                    octopus.increase_energy()\n",
     "\n",
     "            # flash until no more flashes fired\n",
-    "            flashes = 0\n",
-    "            not_done = True\n",
-    "            while not_done:\n",
-    "                not_done = False\n",
+    "            flashes_before = -1\n",
+    "            while flashes_before < self.flashes:\n",
+    "                flashes_before = self.flashes\n",
     "                for y, row in enumerate(self.grid):\n",
     "                    for x, octopus in enumerate(row):\n",
-    "                        flash = octopus.flash_or_not()\n",
-    "                        if flash:\n",
-    "                            flashes += flash\n",
+    "                        if octopus.flashed():\n",
+    "                            self.flashes += 1\n",
     "                            self.radiate(x, y)\n",
-    "                            not_done = True\n",
-    "            self.flashes += flashes\n",
     "\n",
     "            # end step\n",
     "            for row in self.grid:\n",
@@ -131,7 +126,7 @@
     "        for row in self.grid:\n",
     "            grid_strings.append(\"\".join([f\"{octopus.energy:x}\"[-1:] for octopus in row]))\n",
     "        return grid_strings\n",
-    "            \n",
+    "\n",
     "    def __repr__(self):\n",
     "        return \"\\n\".join(self.get_grid())"
    ]
