typo and whitespace corrections

--- a/src/Day 15 Chiton.ipynb
+++ b/src/Day 15 Chiton.ipynb
@@ -199,18 +199,20 @@
    "outputs": [],
    "source": [
     "def expand_map(initial_map: list[list[int]], factor: int) -> list[list[int]]:\n",
-    "    horizontal_blok = []\n",
+    "    horizontal_block = []\n",
     "    for row in initial_map:\n",
     "        new_row = []\n",
     "        for i in range(0, factor):\n",
     "            new_row.extend([col+i if col+i<10 else col+i-9 for col in row])\n",
-    "        horizontal_blok.append(new_row)\n",
+    "        horizontal_block.append(new_row)\n",
+    "\n",
     "    new_map = []\n",
     "    for i in range(0, factor):\n",
-    "        for row in horizontal_blok:\n",
+    "        for row in horizontal_block:\n",
     "            new_map.append([col+i if col+i<10 else col+i-9 for col in row])\n",
     "    \n",
     "    return new_map\n",
+    "\n",
     "\n",
     "def part2(input_data: list[str]) -> int:\n",
     "    risk_map = expand_map(parse_input(input_data), 5)\n",
